--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:title" content="MudBlazor Admin Dashboard">
     <meta name="twitter:description" content="MIT-licensed MudBlazor Admin Dashboard Template">
     <meta name="twitter:image" content="images/AdminDashboardTemplate.png">
-    <base href="/" />
+    <base href="/pos.github.io/" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css?v=5.0.5" rel="stylesheet" />
